<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fab_margin"
    tools:context=".ActivityStore">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textSize="@dimen/text_Size"
        android:textColor="@android:color/black"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/store_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_phone"
        android:textSize="@dimen/text_Size"
        android:textColor="@android:color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/store_phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lat"
        android:textSize="@dimen/text_Size"
        android:textColor="@android:color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/store_lat"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lon"
        android:textSize="@dimen/text_Size"
        android:textColor="@android:color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/store_lon"/>
    <Button
        android:id="@+id/saveStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />


</LinearLayout>